[package]
name = "the-fourth-server"
version = "0.1.0"
edition = "2024"

[lib]
name = "tfserver"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
openssl = "0.10"
sha2 = "0.11.0-rc.0"
num_enum = "0.7"
rand = "0.9.2"
bincode = { version = "2", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-util = {version = "0.7", features = ["codec"]}
futures-util = { version = "0.3", features = ["sink"] }