[package]
name = "the-fourth-server"
version = "0.1.0"
edition = "2024"

[lib]
name = "tfserver"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "tfserver-runtime-test"
path="src/test_main.rs"

[[bin]]
name = "tfserver-client-test"
path="src/test_client.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.11.0-rc.0"
num_enum = "0.7"
rand = "0.9.2"
bincode = { version = "2", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-util = {version = "0.7", features = ["codec"]}
futures-util = { version = "0.3", features = ["sink"] }
async-trait = { version = "0.1" }
tokio-rustls = "0.26.4"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
